# portfoliooptimiser

./: .gitignore  CMakeLists.txt  README.md  download_data.py  graphics.py  main.cpp  simulation_graphics.py
Debug/: TSLA_returns.csv
include/: portfolio.h
include/investinstruments/: investinstrument.h  stocks.h
include/pricing/: price_simulator.h  risk_analysis.h
investinstruments/: investinstrument.h  stockBuilder.h  stocks.cpp  stocks.h
pricing/: price_simulator.cpp
src/: main.cpp
src/investinstrument/: stocks.cpp
src/pricing/: price_simulator.cpp
